# nrf5-sdk

./: .gitignore  README.md
hal/: .cproject  .project  Makefile  log_backend.c  module.mak
nrfstack/: CMakeLists.txt
nrfstack/include/: log_console.h  nrf_sdh_picoos.h
nrfstack/src/: app_timer.c  log_console.c  nrf_sdh_picoos.c
nrfstack/thinlog/: nrf_log.h  nrf_log_ctrl.h  thinlog.c
nrfx/: CMakeLists.txt
stack/: .cproject  .project  Makefile  app_timer.c  module.mak
